Adding Photo to Nav

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,24 +4,26 @@ html(lang="en")
         title= `${h.siteName} || ${title}`
         link(rel="stylesheet", href="/dist/style.css")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    body
-        .inner 
-            .nav_bar 
-                li.nav_item.logo: a.nav__link(href="/")
-                    != h.icon('plant')
-                    span Codie Stover
-                li.nav_item: a.nav__link(href="/resume")
-                    != h.icon('file')
-                    span Resume
-                li.nav_item: a.nav__link(href="/projects")
-                    != h.icon('folder')
-                    span Projects
-                li.nav_item: a.nav__link(href="https://github.com/codiemaureen")
-                    != h.icon('github')
-                    span Github
-                li.nav_item: a.nav__link(href="https://www.linkedin.com/in/codiemaureen/")
-                    != h.icon('LinkedIn')
-                    span LinkedIn
+    body 
+        .wrapper
+            != h.icon('plant')
+            h2 Codie Stover
+        .nav_bar 
+            li.nav_item.logo: a.nav__link(href="/")
+                != h.icon('plant')
+                span Codie Stover
+            li.nav_item: a.nav__link(href="/resume")
+                != h.icon('file')
+                span Resume
+            li.nav_item: a.nav__link(href="/projects")
+                != h.icon('folder')
+                span Projects
+            li.nav_item: a.nav__link(href="https://github.com/codiemaureen")
+                != h.icon('github')
+                span Github
+            li.nav_item: a.nav__link(href="https://www.linkedin.com/in codiemaureen/")
+                != h.icon('LinkedIn')
+                span LinkedIn
         .div 
             .header
                 p Welcome to my portfolio
