--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,8 +10,10 @@ html(lang="en")
             h2 Codie Stover
         .nav_bar 
             li.nav_item.logo: a.nav__link(href="/")
-                != h.icon('plant')
-                span Codie Stover
+                //- != h.icon('plant')
+                span.contact codiestover.cs@gmail.com
+                br
+                span.contact 586-864-3218   
             li.nav_item: a.nav__link(href="/resume")
                 != h.icon('file')
                 span Resume
@@ -21,7 +23,7 @@ html(lang="en")
             li.nav_item: a.nav__link(href="https://github.com/codiemaureen")
                 != h.icon('github')
                 span Github
-            li.nav_item: a.nav__link(href="https://www.linkedin.com/in codiemaureen/")
+            li.nav_item: a.nav__link(href="https://www.linkedin.com/in/codiemaureen/")
                 != h.icon('LinkedIn')
                 span LinkedIn
         .div 
