--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -10,8 +10,8 @@ body {
   color: white;
   text-align: center;
   height: 50vh;
-  background: url("../images/pexels-eberhard-grossgasteiger-629162.jpg") center
-    center no-repeat;
+  background: url("../../images//pexels-eberhard-grossgasteiger-629162.jpg")
+    center center no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -21,7 +21,7 @@ body {
 .nav_bar {
   display: flex;
   list-style: none;
-  justify-content: end;
+  justify-content: flex-end;
   background-color: #241e19;
 }
 
@@ -37,7 +37,7 @@ body {
 
 .logo {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   max-width: 300px;
   /* font-size: 35px; */
   color: white;
@@ -75,4 +75,12 @@ svg:hover {
 svg:not(:root) {
   overflow: hidden;
   fill: white;
+}
+.div {
+  display: flex;
+  justify-content: center;
+  justify-self: center;
+  margin: 10px;
+  background-color: white;
+  border: 10px solid #241e19;
 }
