--- a/views/mixins/_projects.pug
+++ b/views/mixins/_projects.pug
@@ -4,9 +4,9 @@ mixin project()
                 .project__header
                     h2 Here are a few of my projects
                 .project__image 
-                        p images go here
+                    img(src="/images/files.jpg", alt="projects" width="200")
             .project
                 .project__header
                     h2 Here are a few of my projects
-                .project__image 
-                    p images go here
+                .project__image
+                    img(src="/images/files.jpg", alt="projects" width="200")
