--- a/public/sass/partials/_projects.scss
+++ b/public/sass/partials/_projects.scss
@@ -1,15 +1,17 @@
 .projects {
   display: flex;
+  justify-content: center;
+  justify-self: center;
   margin: 10px;
   border: 5px solid #241e19;
 }
 
 .project {
   display: flex;
+  justify-content: center;
+  justify-self: center;
   flex-direction: column;
-  border: 1px solid black;
   margin: 20px;
-  max-width: 200px;
 }
 
 .project__header {
@@ -21,8 +23,9 @@
 
 .project__image {
   display: flex;
-  padding: 10px;
-  border: 5px solid #4e2a2c;
+  justify-content: center;
+  border: 4px solid black;
+  // padding: 5px;
 }
 
 h2 {
