--- a/views/projects.pug
+++ b/views/projects.pug
@@ -1,6 +1,8 @@
 extends layout 
 
+include mixins/_projects
+
 block content 
     h2 Projects
-    .container 
-    .example
+    .div
+        +project()
