--- a/views/resume.pug
+++ b/views/resume.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content 
     h2 Resume and Certifications 
-    .container
+    .resume: a.nav__link(href="/resume/StoverCodie_Resume.docx")
+        img(src="/images/StoverCodie_Resume.jpg", alt="resume")
 
 
