--- a/public/sass/partials/_resume.scss
+++ b/public/sass/partials/_resume.scss
@@ -1,3 +1,14 @@
-.container {
-  background: white;
+.resume {
+  display: flex;
+  justify-content: center;
+  justify-self: center;
+  border: 10px solid black;
+  margin: 80px;
+}
+
+img {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  justify-self: center;
 }
