--- a/public/sass/partials/_variables.scss
+++ b/public/sass/partials/_variables.scss
@@ -1,1 +1,2 @@
-$shadow: 0 0 10px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.1);
+$lightshadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 5px 10px hsla(0, 0%, 0%, 0.15);
+$shadow: 0 5px 10px rgba(0, 0, 0, 0.5), 5px 15px 20px rgba(0, 0, 0, 0.4);
