--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -1,10 +1,19 @@
+body {
+  margin: 0;
+  background: url("../../images//background.jpg") center bottom no-repeat;
+  display: block;
+  background-size: cover;
+  font-size: 36px;
+}
+
 .div {
   display: flex;
   justify-content: center;
   justify-self: center;
-  margin: 10px;
+  margin: 50px auto;
+  max-width: 70vw;
   background-color: white;
-  border: 10px solid #241e19;
+  box-shadow: $shadow;
 }
 
 p {
