--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -1,15 +1,9 @@
-body {
-  background: #8ba792;
-  font-size: 36px;
-  margin: 0;
-}
-
 .wrapper {
   font-size: 50px;
-  text-shadow: 2px 3px #2c3022d7;
+  text-shadow: 2px 3px hsla(77, 17%, 16%, 0.843);
   color: white;
   text-align: center;
-  height: 50vh;
+  height: 40vh;
   background: url("../../images//pexels-eberhard-grossgasteiger-629162.jpg")
     center center no-repeat;
   background-size: cover;
@@ -29,7 +23,7 @@ body {
   display: flex;
   flex: auto;
   font-size: 25px;
-  border: 2px solid #181410;
+  border: 1px solid #181410;
   border-radius: 5%;
   justify-content: center;
   align-items: center;
@@ -37,6 +31,7 @@ body {
 
 .logo {
   display: flex;
+  padding-left: 10px;
   justify-content: flex-start;
   flex: auto 4;
   color: white;
