--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -3,7 +3,7 @@ extends layout
 include mixins/_projects
 
 block content 
+        .header
+            h2 Welcome to my portfolio
         .div 
-            .header
-                p Welcome to my portfolio
-                +project()
+            +project()
