--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -1,6 +1,6 @@
 .wrapper {
   font-size: 50px;
-  text-shadow: 2px 3px hsla(77, 17%, 16%, 0.843);
+  text-shadow: $shadow;
   color: white;
   text-align: center;
   height: 40vh;
@@ -17,6 +17,7 @@
   list-style: none;
   justify-content: flex-end;
   background-color: #241e19;
+  box-shadow: $lightshadow;
 }
 
 .nav_item {
@@ -69,4 +70,5 @@ svg:hover {
 svg:not(:root) {
   overflow: hidden;
   fill: white;
+  background: hsla(27, 18%, 12%, 0.24);
 }
