Adding Project Images

--- a/views/mixins/_projects.pug
+++ b/views/mixins/_projects.pug
@@ -1,12 +1,16 @@
 mixin project()
-        .projects 
             .project
                 .project__header
-                    h2 Here are a few of my projects
-                .project__image 
-                    img(src="/images/files.jpg", alt="projects" width="200")
-            .project
-                .project__header
-                    h2 Here are a few of my projects
+                    h2 Wedding Site
                 .project__image
-                    img(src="/images/files.jpg", alt="projects" width="200")
+                    img(src="/images/nicolewedding.png", alt="projects")
+            .project
+                .project__header
+                    h2 Grub Review Page
+                .project__image
+                    img(src="/images/grubreview.png", alt="projects")
+            .project
+                .project__header
+                    h2 JWT Login 
+                .project__image
+                    img(src="/images/JWTlogin.png", alt="projects")
