--- a/public/sass/partials/_projects.scss
+++ b/public/sass/partials/_projects.scss
@@ -8,25 +8,24 @@
 }
 
 .project {
-  display: flex;
   justify-content: center;
   justify-self: center;
   flex-direction: column;
-  margin: 20px;
+  box-shadow: $shadow;
+  margin: 20px auto;
+  max-width: 60vw;
 }
 
 .project__header {
   display: flex;
   flex-direction: column;
-  font-size: 10px;
-  border: 3px solid #1d3f5e;
+  font-size: 20px;
+  box-shadow: $shadow;
 }
 
 .project__image {
-  display: flex;
   justify-content: center;
-  border: 4px solid black;
-  // padding: 5px;
+  justify-self: center;
 }
 
 h2 {
