Linking project websites

--- a/views/mixins/_projects.pug
+++ b/views/mixins/_projects.pug
@@ -2,15 +2,15 @@ mixin project()
             .project
                 .project__header
                     h2 Wedding Site
-                .project__image
+                .project__image: a(href="https://nicole-wedding.herokuapp.com/")    
                     img(src="/images/nicolewedding.png", alt="projects")
             .project
                 .project__header
                     h2 Grub Review Page
-                .project__image
+                .project__image: a(href="https://grub-review-api.herokuapp.com/") 
                     img(src="/images/grubreview.png", alt="projects")
             .project
                 .project__header
                     h2 JWT Login 
-                .project__image
+                .project__image: a(href="https://login-verify.herokuapp.com/") 
                     img(src="/images/JWTlogin.png", alt="projects")
