Linking github to projects

--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -59,7 +59,7 @@ a:active {
 svg {
   width: 25px;
   height: 25px;
-  padding-right: 10px;
+  margin-right: 10px;
   justify-content: center;
   justify-items: center;
 }
