--- a/public/sass/partials/_projects.scss
+++ b/public/sass/partials/_projects.scss
@@ -23,6 +23,11 @@
   font-size: 20px;
   box-shadow: $shadow;
 }
+.gitlink {
+  display: flex;
+  justify-content: center;
+  background: none;
+}
 
 .project__image {
   justify-content: center;
