--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html(lang="en")
     head
         title= `${h.siteName} || ${title}`
         link(rel="stylesheet", href="/dist/style.css")
+        link(rel="shortcut icon" type="image/png" href="/images/icons/plant.svg")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
     body 
         .wrapper
