--- a/views/mixins/_projects.pug
+++ b/views/mixins/_projects.pug
@@ -9,14 +9,14 @@ mixin project()
             .project
                 .project__header
                     h2 Grub Review Page
-                    .gitlink: a(href="https://grub-review-api.herokuapp.com/")
+                    .gitlink: a(href="https://github.com/codiemaureen/GrubReviewAPI")
                         != h.icon('github')
-                .project__image 
+                .project__image: a(href="https://grub-review-api.herokuapp.com/") 
                     img(src="/images/grubreview.png", alt="projects")
             .project
                 .project__header
                     h2 JWT Login
-                    .gitlink: a(href="https://login-verify.herokuapp.com/")
+                    .gitlink: a(href="https://login-verify.herokuapp.com/")  
                         != h.icon('github')
-                .project__image 
+                .project__image: a(href="https://login-verify.herokuapp.com/") 
                     img(src="/images/JWTlogin.png", alt="projects")
