--- a/public/sass/partials/_projects.scss
+++ b/public/sass/partials/_projects.scss
@@ -5,6 +5,7 @@
 }
 
 .project {
+  background: white;
   display: flex;
   box-sizing: inherit;
   justify-content: center;
@@ -17,14 +18,13 @@
 
 .project__header {
   display: flex;
-  background: white;
-  flex-direction: column;
-  font-size: 20px;
-}
-.gitlink {
-  display: flex;
   justify-content: center;
-  background: none;
+  background: white;
+  font-size: 15px;
+}
+.project__links {
+  display: flex;
+  margin: auto;
 }
 
 .project__image {
