--- a/views/mixins/_projects.pug
+++ b/views/mixins/_projects.pug
@@ -4,9 +4,9 @@ mixin project()
                 .project__header
                     h2 Wedding Site
                 .project__links
-                    .projlink: a(href="https://github.com/codiemaureen/Nicole_Wedding_Page") 
+                    .gitlink: a(href="https://github.com/codiemaureen/Nicole_Wedding_Page") 
                         != h.icon('github')
-                    .projlink: a(href="https://nicole-wedding.herokuapp.com/") 
+                    .gitlink: a(href="https://nicole-wedding.herokuapp.com/") 
                         != h.icon('laptop')
                 .project__image: a(href="https://nicole-wedding.herokuapp.com/")    
                     img(src="/images/nicolewedding.png", alt="projects")
@@ -14,9 +14,9 @@ mixin project()
                 .project__header
                     h2 Grub Review Page
                 .project__links
-                    .projlink: a(href="https://github.com/codiemaureen/GrubReviewAPI")
+                    .gitlink: a(href="https://github.com/codiemaureen/GrubReviewAPI")
                         != h.icon('github')
-                    .projlink: a(href="https://grub-review-api.herokuapp.com/") 
+                    .gitlink: a(href="https://grub-review-api.herokuapp.com/") 
                         != h.icon('laptop')
                 .project__image: a(href="https://grub-review-api.herokuapp.com/") 
                     img(src="/images/grubreview.png", alt="projects")
@@ -24,9 +24,39 @@ mixin project()
                 .project__header
                     h2 JWT Login
                 .project__links
-                    .projlink: a(href="https://login-verify.herokuapp.com/")  
+                    .gitlink: a(href="https://github.com/codiemaureen/JWTLoginAPI")  
                         != h.icon('github')
-                    .projlink: a(href="https://login-verify.herokuapp.com/") 
+                    .gitlink: a(href="https://login-verify.herokuapp.com/") 
                         != h.icon('laptop')
                 .project__image: a(href="https://login-verify.herokuapp.com/") 
                     img(src="/images/JWTlogin.png", alt="projects")
+            .project
+                .project__header
+                    h2 Product Fetcher API
+                .project__links
+                    .gitlink: a(href="https://github.com/codiemaureen/Products_API")  
+                        != h.icon('github')
+                    .gitlink: a(href="https://product-search-api.herokuapp.com/") 
+                        != h.icon('laptop')
+                .project__image: a(href="https://product-search-api.herokuapp.com/  ") 
+                    img(src="/images/product.png", alt="projects")
+            .project
+                .project__header
+                    h2 Dad Jokes
+                .project__links
+                    .gitlink: a(href="https://github.com/codiemaureen/DadJokes_API")  
+                        != h.icon('github')
+                    .gitlink: a(href="https://dad-jokesapi.herokuapp.com/") 
+                        != h.icon('laptop')
+                .project__image: a(href="https://dad-jokesapi.herokuapp.com/") 
+                    img(src="/images/dadsjokes.png", alt="projects")
+            .project
+                .project__header
+                    h2 Job Tracker API
+                .project__links
+                    .gitlink: a(href="https://github.com/codiemaureen/JobsAPI")  
+                        != h.icon('github')
+                    .gitlink: a(href="https://jobtracking-api.herokuapp.com/") 
+                        != h.icon('laptop')
+                .project__image: a(href="https://jobtracking-api.herokuapp.com/") 
+                    img(src="/images/jobsapi.png", alt="projects")
