--- a/views/projects.pug
+++ b/views/projects.pug
@@ -3,5 +3,6 @@ extends layout
 include mixins/_projects
 
 block content 
-    h2 Projects
-    +project()
+    .inner
+        h2 Projects
+        +project()
