--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -32,3 +32,11 @@ p {
   margin: 20px;
   padding: 20px;
 }
+
+.inner {
+  max-width: 900px;
+  margin: 0 auto;
+  @media all and (max-width: 900px) {
+    padding: 2rem;
+  }
+}
