--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -3,6 +3,7 @@ extends layout
 include mixins/_projects
 
 block content 
-        .header
-            h2 Welcome to my portfolio
-            +project()
+        .inner
+            .header
+                h2 Welcome to my portfolio
+                +project()
