--- a/public/sass/partials/_projects.scss
+++ b/public/sass/partials/_projects.scss
@@ -19,11 +19,13 @@
   display: flex;
   justify-content: center;
   background: white;
+  height: 40px;
   font-size: 15px;
 }
 .project__links {
   display: flex;
-  margin: auto;
+  padding-top: 10px;
+  margin: 0 auto;
 }
 
 .project__image {
@@ -34,13 +36,4 @@
 h2 {
   display: flex;
   justify-content: center;
-}
-
-.container {
-  display: flex;
-  border: 10px solid #241e19;
-  height: 60vh;
-  background-color: white;
-  box-shadow: 2px 2px rgba(211, 211, 211, 0.308);
-  margin: 10px;
 }
