--- a/public/sass/partials/_projects.scss
+++ b/public/sass/partials/_projects.scss
@@ -25,15 +25,7 @@
 .project__links {
   display: flex;
   padding-top: 10px;
-  margin: 0 auto;
+  margin: auto;
 }
 
-.project__image {
-  justify-content: center;
-  justify-self: center;
-}
 
-h2 {
-  display: flex;
-  justify-content: center;
-}
