--- a/public/sass/partials/_projects.scss
+++ b/public/sass/partials/_projects.scss
@@ -13,6 +13,12 @@
   box-shadow: $shadow;
   margin: 1.25em 0 0 1.25em;
   width: calc(33.3333% - 1.25em);
+  @media all and (max-width: 850px) {
+    width: calc(50% - 1.25em);
+  }
+  @media all and (max-width: 550px) {
+    width: 100%;
+  }
 }
 
 .project__header {
@@ -21,11 +27,15 @@
   background: white;
   height: 40px;
   font-size: 15px;
+  @media all and (max-width: 850px) {
+    width: calc(50% - 1.25em);
+  }
+  @media all and (max-width: 550px) {
+    width: 100%;
+  }
 }
 .project__links {
   display: flex;
   padding-top: 10px;
   margin: auto;
 }
-
-
