Changing navbar image

--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background: url("../../images//background.jpg") center bottom no-repeat;
+  background:white;
   display: block;
   background-size: cover;
   font-size: 36px;
